[gd_scene load_steps=3 format=3 uid="uid://dimv7fs6awfl0"]

[ext_resource type="Script" uid="uid://c22s1eosgcvfg" path="res://scripts/root.gd" id="1_lrqlo"]
[ext_resource type="PackedScene" uid="uid://ci3mudmvfnhux" path="res://scenes/map.tscn" id="2_twpsu"]

[node name="Root" type="Node2D"]
script = ExtResource("1_lrqlo")

[node name="Map" parent="." instance=ExtResource("2_twpsu")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 321)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NoiseLabel" type="Label" parent="CanvasLayer"]
offset_right = 44.0
offset_bottom = 23.0
text = "Noise"

[node name="NoiseSlider" type="HSlider" parent="CanvasLayer"]
offset_top = 24.0
offset_right = 1152.0
offset_bottom = 40.0
step = 0.05
value = 5.0

[node name="RadiusLabel" type="Label" parent="CanvasLayer"]
offset_top = 40.0
offset_right = 52.0
offset_bottom = 63.0
text = "Radius"

[node name="RadiusSlider" type="HSlider" parent="CanvasLayer"]
offset_top = 57.0
offset_right = 1152.0
offset_bottom = 73.0
step = 0.05
value = 15.0

[node name="SeedLabel" type="Label" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 76.0
offset_right = 51.0
offset_bottom = 99.0
text = "Seed"

[node name="SeedsSlider" type="HSlider" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 93.0
offset_right = 1151.0
offset_bottom = 109.0
max_value = 300.0
step = 0.05
value = 15.0

[node name="ZoomLabel" type="Label" parent="CanvasLayer"]
offset_top = 111.0
offset_right = 52.0
offset_bottom = 134.0
text = "Zoom"

[node name="ZoomSlider" type="HSlider" parent="CanvasLayer"]
offset_top = 128.0
offset_right = 1152.0
offset_bottom = 144.0
max_value = 10.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="CanvasLayer/NoiseSlider" to="." method="_on_noise_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/RadiusSlider" to="." method="_on_radius_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SeedsSlider" to="." method="_on_seeds_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/ZoomSlider" to="." method="_on_zoom_slider_value_changed"]
